--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "ts-node": "^10.9.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2"
-  }
+  },
+  "gitRepository": "https://github.com/JakubStiburek/validate-class-properties"
 }
